# mochi-quintain

./: .gitignore  Makefile.am  README.md  configure.ac  spack.yaml
include/: quintain-client.h  quintain-macros.h  quintain-server.h  quintain.h
maint/: mochi-quintain-server.pc.in  mochi-quintain.pc.in  mochi-treadmill.pc.in
maint/hooks/: pre-commit
src/: Makefile.subdir  bedrock-c-wrapper.cpp  bedrock-c-wrapper.h  hoard-c.h  hoard.cc  hoard.hpp  quintain-bedrock-module.c  quintain-bedrock-module.cpp  quintain-benchmark-parse.sh  quintain-benchmark-scatter.py  quintain-benchmark-violin.py  quintain-benchmark.c  quintain-client.c  quintain-cpu-power-watcher.sh  quintain-rpc.h  quintain-server.c
tests/: Makefile.subdir  basic.sbatch  basic.sh  mochi-quintain-provider-2svr-A.json  mochi-quintain-provider-2svr-B.json  mochi-quintain-provider-rpc-threads.json  mochi-quintain-provider.json  mochi-quintain-provider.jx9  mochi-quintain-provider.yaml  multi.sh  quintain-benchmark-example.json  summit.lsf
